tests/compiletests/ui/explicit_layout.stderr
error: cannot cast between pointer types
       from `*[u32         to `*[u32]`
  --> /home/firestar99/.rustup/toolchains/nightly-2025-06-30-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/array/mod.rs:594:6
   |
LL |     }
   |      ^
   |
note: used from within `<[u32  --> /home/firestar99/.rustup/toolchains/nightly-2025-06-30-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/array/mod.rs:594:6
   |
LL |     }
   |      ^
note: called by `<[u32  --> /home/firestar99/workspace/rust-gpu/crates/spirv-std/src/explicit_layout.rs:36:14
   |
LL |         self.as_mut_slice()
   |              ^^^^^^^^^^^^^^
note: called by `<spirv_std::explicit_layout::prototype::MyStruct as spirv_std::explicit_layout::ExplicitLayout>::read`
  --> /home/firestar99/workspace/rust-gpu/crates/spirv-std/src/explicit_layout.rs:59:19
   |
LL |             array.as_mut_slice2(),
   |                   ^^^^^^^^^^^^^^^
note: called by `explicit_layout::main`
  --> $DIR/explicit_layout.rs:26:13
   |
LL |     let x = MyStruct::read(input, 0);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main`
  --> $DIR/explicit_layout.rs:22:8
   |
LL | pub fn main(
   |        ^^^^

error: cannot cast between pointer types
       from `*[u32         to `*[u32]`
  --> /home/firestar99/.rustup/toolchains/nightly-2025-06-30-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/array/mod.rs:586:6
   |
LL |     }
   |      ^
   |
note: used from within `<[u32  --> /home/firestar99/.rustup/toolchains/nightly-2025-06-30-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/array/mod.rs:586:6
   |
LL |     }
   |      ^
note: called by `<[u32  --> /home/firestar99/workspace/rust-gpu/crates/spirv-std/src/explicit_layout.rs:32:14
   |
LL |         self.as_slice()
   |              ^^^^^^^^^^
note: called by `<spirv_std::explicit_layout::prototype::MyStruct as spirv_std::explicit_layout::ExplicitLayout>::write`
  --> /home/firestar99/workspace/rust-gpu/crates/spirv-std/src/explicit_layout.rs:75:19
   |
LL |             array.as_slice2(),
   |                   ^^^^^^^^^^^
note: called by `explicit_layout::main`
  --> $DIR/explicit_layout.rs:27:5
   |
LL |     MyStruct::write(output, 0, x);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main`
  --> $DIR/explicit_layout.rs:22:8
   |
LL | pub fn main(
   |        ^^^^

error: aborting due to 2 previous errors

